hphp/test/slow/object/const/static/abstract/abstract_prop.php.expectf
Fatal error: Instance property may not be abstract. in %s/abstract_prop.php on line 6
